ws-slo/infrastructure/victoria-metrics/overlays/nishir-tailnet/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: victoria-logs-monitoring
  namespace: monitoring-system
spec:
  gatewayClassName: victoria-logs-monitoring
  listeners:
    - name: http
      port: 80
      protocol: HTTP
    - name: https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: studio-shikanime-i-grafana
            group: ""
            kind: Secret
          - name: studio-shikanime-i-metrics
            group: ""
            kind: Secret
